# zk-quorum

./: .gitignore  AGENTS.md  CLAUDE-MEMORY.md  CLAUDE.md  Cargo.toml  LICENSE  package-lock.json  package.json  rust-toolchain.toml  techs-specs-zk-quorum.md  zk-quorum.md
.github/workflows/: ci.yml
.opencode/agents/: build-direct.md
apps/web/: .gitignore  README.md  WEB_INTEGRATION.md  admin.html  audit.html  harness.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  voter.html
circuits/commit-vote/: main.circom
circuits/common/: credential.circom  gadgets.circom  membership.circom  merkleProof.circom  poseidon255.circom  range.circom  scoped-nullifier.circom
circuits/public-vote/: main.circom
circuits/test/: test_credential.circom  test_poseidon_vectors.circom
contracts/groth16-verifier/: Cargo.toml
contracts/zk-quorum/: Cargo.toml
contracts/zk-quorum/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  test_e2e.rs  types.rs
crates/credential/: Cargo.toml
crates/credential/src/: lib.rs
crates/zk/: Cargo.toml
docs/brainstorming/: ahora-hare-el-trabajo-bien.md  brainstorming-gemini-3.5-flash-es.md  brainstorming-gemini-3.5-flash.md  brainstorming-opus-4.8.md  description-es.md  description.md  semi-final-v2.md  semi-final.md
docs/internal/: agent-context-protocol.md  model-bench.md
docs/plan/: OPEN-CODE-EXECUTION-LOG.md  ZK-QUORUM-EXECUTION-PLAN.md
scripts/: build-scope-fixtures.js  build-test-fixtures.js  build-verifier-first.sh  check-setup-reproducibility.js  extract-poseidon-constants.js  fetch-setup-assets.js  gate-c0.js  replay-e0.js  run-all-tests.sh  run-e0-local.sh  run-t0-testnet-r0.sh  run-upre-browser.sh  setup-groth16.sh  stage-assets-to-public.js  test-witness.js  verify-manifests.js  verify-poseidon-bigint.py  write-setup-manifests.js
scripts/bootstrap/: bootstrap.sh  lib.sh  verify.sh
scripts/evidence/: EVIDENCE_INTEGRATION.md  README.md  package-lock.json  package.json  tsconfig.json
services/relayer/: README.md  RELAYER_INTEGRATION.md  package-lock.json  package.json  tsconfig.json
spike/: SPIKE-RESULTS.md  bootstrap.sh
tools/auditor/: AUDITOR_INTEGRATION.md  README.md  package-lock.json  package.json  (+1 more)
tools/circom2soroban/: Cargo.toml  cli.js  package.json
tools/circom2soroban/src/: convert.js  lib.rs  main.rs
tools/circom2soroban/test/: test-convert.js
tools/circom2soroban/tests/: test_convert.rs
(+116 files in other folders)
