[package]
name = "credential"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
publish = false

[dependencies]
soroban-poseidon = "=25.0.0"
soroban-sdk = "=25.1.0"

[dev-dependencies]
soroban-sdk = { version = "=25.1.0", features = ["testutils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex-literal = "0.4"

# Standalone while this lane is developed in a nested Git worktree.
# The integrator removes this table when adding the crate to the root workspace.
[workspace]
