[package]
name = "circom2soroban"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
publish = false

[workspace]

[lib]
name = "circom2soroban"
path = "src/lib.rs"

[[bin]]
name = "circom2soroban"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = "=0.4.0"
ark-ec = "=0.4.2"
ark-ff = "=0.4.2"
ark-serialize = "=0.4.2"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
